添加部署脚本